[package]
name = "mobc-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
mobc = "0.8.3"
mobc-postgres = "0.8.0"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
